--- a/section/abstract.tex
+++ b/section/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 	Buku Pedoman ini dibuat dengan tujuan memberikan acuan, bagi mahasiswa Tingkat Akhir dan dosen
-	Pembimbing. Pada intinya buku ini menjelaskan secara lengkap tentang Standar pengerjaan Intership II dan 
+	Pembimbing. Pada intinya buku ini menjelaskan secara lengkap tentang Standar pengerjaan Intership  dan 
 	Tugas Akhir
 	di Program Studi D4 Teknik Informatika, dan juga mengatur mekanisme, teknik penulisan, serta
 	penilaiannya.Dengan demikian diharapkan semua pihak yang terlibat dalam aktivitas Bimbingan Mahasiswa Tingkat Akhir
