--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -6,9 +6,15 @@ Penulisan jurnal harus menggunakan Latex dengan template IEEE.　Template bisa d
 Di dalam penulisan artikel ilmiah harus mengikuti standar minimal penulisan ilmiah. Standar ini digunakan untuk menyamakan semantik bahasa agar tulisan lebih mudah dibaca dan dipahami. Penggunaan standar merupakan keniscayaan dalam penulisan artikel ilmiah.
 \subsection{Penggunaan Kalimat}
 Penulisan jurnal harus menggunakan kalimat aktif dan positif. Memiliki Subject, Predikat dan Object yang jelas. Tidak bertele-tele dan terlalu panjang dalam penggunaan kalimat(terlalu banyak kata sambung dan tanda koma). Satu paragraf minimal terdiri dari tiga kalimat. Hindari paragraph yang terdiri dari satu kalimat yang biasanya digunakan untuk penjelasan gambar, rumus atau tabel. Lebih baik digabungkan saja dengan narasi paragraph sebelumnya. Jika memang harus ada penjelasan kalimat, maka kembangkan lagi menjadi narasi satu paragraph utuh. Tidak boleh menulis kata ganti orang seperi Penulis, Saya, Kami, Mereka. Gunakan kata benda seperti penelitian ini, riset ini.
+
 \subsection{Penempatan Sitasi}
-Sitasi ditempatkan tepat pada akhir kalimat penjelasan referensi sebelum tanda pemisah antar kalimat(koma atau titik) tanpa spasi. Sitasi juta dapat ditumpuk pada sebuah kalimat yang merupaka  penjelasan singkat dari referensi. 
+Sitasi ditempatkan tepat pada akhir kalimat penjelasan referensi sebelum tanda 
+pemisah antar kalimat (koma atau titik) tanpa spasi. 
+Sitasi juta dapat ditumpuk pada sebuah kalimat yang merupaka  penjelasan singkat dari referensi. 
+Please ensure that: all references have been cited in your text. Each citation should be written in the order of appearance in the text. The references must be presented in numbering. 
+
 \subsection{gambar, rumus, tabel}
+Pemanfaatan instrumen pendukung gambar kualitasnya harus ditingkatkan, jangan sampai terdapat gambar yang tidak bisa terbaca tulisannya.
 Tidak diperbolehkan memberikan narasi penunjukan relatif. seperti :
 \begin{itemize}
 	\item Lebih detailnya lihat gambar di bawah ini
@@ -17,39 +23,321 @@ Tidak diperbolehkan memberikan narasi penunjukan relatif. seperti :
 \end{itemize}
 Diperbaiki yang seharusnya :
 \begin{itemize}
-	\item Pada gambar 1.1 terlihat bahwa data penduduk sudah mulai jenuh.
-	\item Total kejenuhan hasil kalkulasi terlihat di tabel 1.1
-	\item Rumus 1.1 merupakan rumus kalkulasi tingkat kejenuhan
+	\item Pada gambar 1.1 terlihat bahwa hasil perhitungan penduduk sudah mulai jenuh.
+	\item Total kejenuhan hasil kalkulasi terlihat di tabel 1.1.
+	\item Rumus 1.1 merupakan rumus kalkulasi tingkat kejenuhan.
 \end{itemize}
+Prepare your figures in high quality and created by yourself (not copy and paste from other parties). All legends, captions, etc in your figures MUST in English.
+
 
 \section{Kerangka Jurnal}
-Kerangka acuan dalam membuat jurnal harus memenuhi standar acuan di sub bab ini. Masing-masing kerangka jurnal harus memenuhi standar dan aturan yang ditetapkan. Pengerjaan jurnal biasanya lebih awal daripada pengerjaan laporan.Bagian-bagian dari jurnal terdiri dari abstrak(Abstract), pendahuluan(Introduction), metode(Methods), Penelitian Terkait(Related Works),percobaan(Experiment), hasil(Result) dan diskusi(Discussion).
+Kerangka acuan dalam membuat jurnal harus memenuhi standar acuan di sub bab ini. Masing-masing kerangka jurnal harus memenuhi standar dan aturan yang ditetapkan. Pengerjaan jurnal biasanya lebih awal daripada pengerjaan laporan.Bagian-bagian dari jurnal terdiri dari abstrak (Abstract), pendahuluan (Introduction), metode (Methods), Penelitian Terkait (Related Works),percobaan (Experiment), hasil (Result) dan diskusi (Discussion).
+
+\subsection{Judul}
+Maksimal 10 (sepuluh) kata dalam Bahasa Inggris ringkas dan tegas.
+
 \subsection{Abstract}
-Terdiri dari 150-250 kata tanpa ada sitasi. Berisi latar belakang, tujuan,metode, hasil,kesimpulan dan saran. Kata kunci atau keyword ditentukan dengan nama metode yang digunakan dan sub sub bidang penelitian yang dilakukan. Kata kunci minimal harus terdapat tiga kata kunci.
+Terdiri dari 150-200 kata tanpa ada sitasi. Berisi latar belakang, tujuan,metode, hasil,kesimpulan dan saran. Pada abstrak harus dimunculkan persoalan utama dan pentingnya melakukan penelitian ini, serta solusi yang diusulkan. Isi tertuang dengan kalimat yang jelas.Kata kunci atau keyword ditentukan dengan nama metode yang digunakan dan sub sub bidang penelitian yang dilakukan. Kata kunci minimal harus terdapat lima kata kunci.
 
 \subsection{Introduction}
-Terdapat penekanan dan penjelasan akan pentingnya dilakukan penelitian ini. Setiap ada pemaparan data, informasi, dan sebuah pernyataan pada sebuah kalimat maka wajib diakhiri dengan sitasi.
+Pada bagian pendahuluan uraikan rincian persoalan terkini berdasarkan beberapa referensi dari jurnal intenasional yang di sitasi, sehingga penelitian ini layak dilakukan. An Introduction should contain the following three parts:
+\begin{itemize}
+    \item Background: Authors have to make clear what the context is. Ideally, authors should give an idea of the state-of-the art of the field the report is about.
+    \item  The Problem: If there was no problem, there would be no reason for writing a manuscript, and definitely no reason for reading it. So, please tell readers why they should proceed reading. Experience shows that for this part a few lines are often sufficient.
+    \item The Proposed Solution: Now and only now! - authors may outline the contribution of the manuscript. Here authors have to make sure readers point out what are the novel aspects of authors work.
+\end{itemize}
+Authors should place the paper in proper context by citing relevant papers. Setiap ada pemaparan data, informasi, dan sebuah pernyataan pada sebuah kalimat maka wajib diakhiri dengan sitasi.Minimal terdapat sitasi pada setiap kalimat pernyataan, informasi, dan data pada bagian Introduction dari jurnal 5 tahun terakhir terindex scopus.
 
 \subsection{Related Works}
-Penjelasan singkat dengan sitasi dari artikel yang direferensikan. Artikel yang dijelaskan merupakan artikel yang terkait dengan kata kunci penelitian. Minimal 3 Paragraph. Pada paragraph terakhir harus ada pernyataan perbedaan antara penelitian yang akan dilakukan dengan penelitian yang disebutkan pada sitasi di related works.
+Penjelasan singkat dengan sitasi dari artikel yang direferensikan minimal dari 10 artikel. Artikel yang dijelaskan merupakan artikel yang terkait dengan kata kunci penelitian. Minimal 3 Paragraph. Pada paragraph terakhir harus ada pernyataan perbedaan antara penelitian yang akan dilakukan dengan penelitian yang disebutkan pada sitasi di related works.
 
 \subsection{Method}
+Penjelasan teknis yang jelas dan gamblang mengenai metode yang digunakan dengan sitasi. Terdiri dari definisi, konsep, rumus atau diagram. Metode yang digunakan adalah metode yang terdapat pada referensi dalam 5 tahun terakhir  dari  jurnal  internasional  terindex  scopus. 
 
-Penjelasan teknis yang jelas dan gamblang mengenai metode yang digunakan dengan sitasi. Terdiri dari definisi, konsep, rumus atau diagram.
-
-\subsection{Experiment and Result}
+\subsection{Experiment}
 Data sumber yang jelas dan cukup untuk dijadikan penelitian, disertai dengan hasil nya sesuai langkah-langkah yang di tuliskan di Method.
 
-\subsection{Discussion}
-Penjelasan mengenai result dan saran pengembangan penelitian lanjutan.
+\subsection{Result and Discussion}
+Sangat jelas relevasinya dengan latar belakang dan pembahasan, dirumuskan dengan singkat. The presentation of results should be simple and straightforward in style. You should improve your analyzing and also present the comparison between performance of your approach and other researches. Results given in figures should not be repeated in tables. This section report the most important findings, including results of analyses as appropriate. It is very important to prove that your manuscript has a significant value and not trivial.
 
+\subsection{Reference}
+Semua  referensi  yang  digunakan  harus  terindex  pada  google  scholar.   Minimal  15 referensi dari jurnal terindeks Scopus dan merupakan artikel dalam 5 tahun terakhir. Jurnal yang terindex scopus bisa dicek di situs scimagojr.com.  Format referensi yang disikan  pada  formulir  pengajuan  penelitian  tingkat  akhir  adalah  BibTex.   BibTex referensi bisa didapatkan pada laman Google Scholar.
 
 \section{Standar Format Latex}
-Bisa dilihat di menu standar portal kampus keren
+Beberapa Aturan yang harus dipatuhi :
+\begin{enumerate}
+
+    \item file disimpan dalam format ber ekstensi .tex per chapter masing2 di folder section
+
+    \item gambar disimpan dalam folder figures dengan namagambar
+
+    \item referensi dari google scholar,scholar.google.com
+
+    \item Setiap referensi yang diambil, maka tambahkan dan tuliskan ke dalam file bernama references.bib yang berisi kumpulan bibTex dari referensi. Gunakan standar pengutipan yang baik dan benar
+
+    \item Gambar disebutkan di dalam artikel dengan format sesuai labelnya yaitu \\ \verb|\ref{labelgambar}|. \\ Gambar diselipkan dengan menambahkan blok sintaks :
+    \begin{verbatim}
+    \begin{figure}[ht]
+    \centerline{\includegraphics[width=1\textwidth]
+    {figures/namagambar.JPG}}
+    \caption{penjelasan keterangan gambar.}
+    \label{labelgambar}
+    \end{figure}
+    
+    Contoh :
+    Pada gambar \ref{labelgambar} dijelaskan bahwa 
+    sistem operasi memiliki 3 versi.
+    \end{verbatim}
+
+    \item Referensi disebutkan dengan menyebutkan nama di dalam file bibtex No.4. \\
+    Contoh, Jika Bibtex sudah diinputkan kedalam reference.bib seperti ini :
+    \begin{verbatim}
+    @inproceedings{ganapathi2006windows,
+      title={Windows XP Kernel Crash Analysis.},
+      author={Ganapathi, Archana and Ganapathi, 
+      Viji and Patterson, David A},
+      booktitle={LISA},
+      volume={6},
+      pages={49--159},
+      year={2006}
+    }
+    \end{verbatim}
+    Maka penulisan kalimat di jurnal : \\
+    Dalam sebuah artikel dari Ganapathi yang 
+    menyebutkan bahwa komputasi adalah keniscayan \verb|\cite{ganapathi2006windows}|.
+    
+    \item Penyebutan subbab dan subsubbab diatur dengan cara : \\
+    judul sub bab : \\ 
+    \verb|\section{nama sub bab}| \\
+    judul sub sub bab ditulis dengan :\\ 
+    \verb|\subsection{judul sub sub bab} | \\
+    judul sub sub sub bab ditulis dengan : \\ \verb|\subsubsection{Judul sub sub sub bab} | \\
+    contoh :
+    \begin{verbatim}
+    \section{Sejarah Peta}
+Perkembangan peta dunia tidak luput dari para ahli 
+geografi dan kartografi. Peta dunia yang populer pada saat 
+ini merupakan 
+kontribusi dari para 
+pembuat peta sebelumnya
+
+\subsection{Ptolemy's}
+Ptolemy's diduga membuat peta pada abad ke 2
+\end{verbatim}
+    
+    \item untuk list dan nomor gunakan enumerate atau itemize contoh :
+    \begin{verbatim}
+berikut nama anggota kelompok
+\begin{enumerate}
+\item darso
+\item karyo
+\item doyok
+\end{enumerate}
+
+\begin{enumerate}
+\item
+This is the first item in the numbered list.
+
+\item
+This is the second item in the numbered list.
+\end{enumerate}
+
+\begin{itemize}
+\item
+This is the first item in the itemized list.
+
+\item
+This is the first item in the itemized list.
+This is the first item in the itemized list.
+This is the first item in the itemized list.
+\end{itemize}
+
+\begin{itemize}
+\item[]
+This is the first item in the itemized list.
+
+\item[]
+This is the first item in the itemized list.
+This is the first item in the itemized list.
+This is the first item in the itemized list.
+\end{itemize}
+    \end{verbatim}
+    
+    \item spesial karakter menggunakan tanda `\verb|\|' didepannya contoh :
+    \begin{verbatim}
+\& 
+\% 
+\$ 
+\#  
+\{ \}
+\_
+\"dalam petik\"
+`dalam petik'
+jika spesial karakter menjadi banyak atau satu baris gunakan verb
+contoh :
+\verb|%$'%&$&'%'%'%&'%|
+    \end{verbatim}
+    
+    \item untuk tabel gunakan table , dan jangan lupa tabel di referensikan pada kalimat berdasarkan labelnya. contoh:
+    \begin{verbatim}
+ini merupakan contoh tabel \ref{table:contoh} ukuran kecil.
+\begin{table}[h]
+\caption{Small Table}
+\centering
+\begin{tabular}{ccc}
+\hline
+one&two&three\\
+\hline
+C&D&E\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
+    \end{verbatim}
+    
+    \item untuk rumus gunakan tag equation dan di referensikan pada kalimat dengan tag ref sesuai labelnya contoh:
+    \begin{verbatim}
+Luas permukaan dijelaskan pada rumus \ref{eq:1}.Volume dijelaskan 
+pada rumus \ref{eq:2}.
+$L$ merupakan luas, $\pi$ adalah 3,14.
+\begin{equation}\label{eq:1}
+     L = 4 \pi r^2 \,
+\end{equation}
+ \begin{equation}\label{eq:2}
+     V = \frac{4}{3}\pi r^3
+\end{equation}
+    \end{verbatim}
+    
+    \item untuk kode program menggunakan verbatim
+    \begin{verbatim}
+\ begin{verbatim}
+a = "anu"
+b = "itu"
+c = a + b
+print(c) 
+\ end{verbatim}
+    \end{verbatim}
+\end{enumerate}
+
+
+
+
 
 \chapter{Standar Penulisan Laporan}
 
-Penulisan Laporan untuk internship . 
+Penulisan Laporan untuk internship dan Tugas Akhir . 
 
-\section{Standar Penulisan}
-Di dalam penulisan artikel ilmiah harus mengikuti standar minimal penulisan ilmiah. Standar ini digunakan untuk menyamakan semantik bahasa agar tulisan lebih mudah dibaca dan dipahami. Penggunaan standar merupakan keniscayaan dalam penulisan artikel ilmiah.
+\section{Kerangka Penulisan}
+Penulisan laporan internship dan tugas akhir harus mengikuti kerangka yang telah di tentukan sebagai berikut :
+
+\begin{enumerate}
+\item
+Bagian Awal terdiri dari :
+\begin{enumerate}
+\item lembar muka/cover halam depan bahasa indonesia dan bahasa inggris ; (hal. Lampiran)
+\item lembar pengesahan dari perusahaan dan prodi/jurusan; (hal. Lampiran) 
+\item surat pernyataan tidak melakukan plagiarisme ; (hal. Lampiran)
+\item abstrak (dalam Bahasa Indonesia); (hal. Lampiran)
+\item abstract (dalam Bahasa Inggris); (hal. Lampiran)
+\item kata pengantar; (hal. Lampiran)
+\end{enumerate}
+Daftar isi termasuk :
+\begin{enumerate}
+\item lembar muka/cover halam depan bahasa indonesia dan bahasa inggris ; (hal. Lampiran)
+\item lembar pengesahan dari perusahaan dan prodi/jurusan; (hal. Lampiran) 
+\item	daftar gambar; (hal. Lampiran)
+\item	daftar tabel; (hal. Lampiran)
+\item	daftar simbol; (hal. Lampiran)
+\item	daftar singkatan; (hal. Lampiran)
+\item	daftar lampiran. (hal. Lampiran) 
+
+\end{enumerate}
+\item
+Bagian Isi terdiri dari :
+\begin{enumerate}
+\item BAB I Pendahuluan
+\begin{itemize}
+\item 1.1.	Latar Belakang 
+\item 1.2.	Identifikasi Masalah 
+\item 1.3.	Tujuan dan Manfaat 
+\item 1.4.	Ruang Lingkup 
+\item 1.5.	Penelitian Sebelumnya
+\item 1.6.	Gambaran Umum Metodologi Penelitian 
+\end{itemize}
+\item BAB II Landasan Teori
+\item BAB III Gambaran Organisasi Perusahaan
+\begin{itemize}
+\item 3.1.	Sejarah Perusahaan
+\item 3.2.	Visi dan Misi Perusahaan
+\item 3.3.	Struktur Organisasi dan Job Description Perusahaan 
+\item 3.4.	Deskripsi dan Ruang Lingkup Internsip/Tugas Akhir
+\end{itemize}
+\item BAB IV Metodologi Penelitian
+\begin{itemize}
+\item 4.1.	Diagram Alur Metodologi Penelitian.
+\item 4.2.  Tahapan – Tahapan Diagram Metodologi Penelitian
+
+Untuk menentukan diagram alur Metodologi Penelitain bisa menggunakan jurnal terindex scopus.
+ 
+\end{itemize}
+\item BAB V Analisis dan Sistem
+\begin{itemize}
+\item 5.1.	Analisis sistem yang berjalan
+\item 5.2.	Analisis sistem yang akan dibangun
+\item 5.3.	Analisis dan Perancangan Database
+\item 5.4.	Analisis dan Perancangan User Interface Sistem. 
+\item 5.5.	Analisis dan Perancangan Arsitektur Sistem/Aplikasi.
+\end{itemize}
+\item BAB V Pembahasan dan Evaluasi
+
+
+Pembahasa yang dilakukan dengan cara mengukur dari hasil analisi dengan menggunakan framwork dan metode yang ada.
+\item BAB VI Penutup
+\begin{itemize}
+\item 6.1.	Kesimpulan
+\item 6.2.  Saran
+
+merangkum dan menjawab dari hasil keseluruhan masalah yang ada
+ 
+\end{itemize}
+\item Daftar Pustaka
+
+Ketentuan dalam penulis kajian pustaka menggunakan format IEEE dan referensi yang bersumber dari jurnal terindex scopus terdiri dari
+\begin{itemize}
+\item
+Internship dan Tugas Akhir : 15 jurnal terindex scopus dan 5 referensi perpustakaan Politeknik Pos Indonesia
+\end{itemize}
+\item Lampiran
+\end{enumerate}
+\end{enumerate}
+
+\section{Ukuran Kertas, Jenis Kertas dan Huruf}
+Penulisan laporan internship dan tugas akhir harus mengikuti ukuran kertas, jenis kertas dan huruf sebagai berikut :
+\begin{enumerate}
+\item Ukuran kertas adalah A4 (2 x 29,7 Cm), dengan berat kertas 80 gram
+\item Judul bab diketik dengan menggunakan huruf besar (kapital), font Arial, 16 point, Bold, dan diletakkan ditengah-tengah (center); sedangkan sub bab menggunakan 14 point. Jarak antara isi tesis dengan sub bab adalah 4 spasi, dan pengetikan angka pada judul tiap bab memakai angka Romawi. Isi laporan diketik dengan menggunakan font Times New Roman, 12 point, 2 spasi.. Penulisan dan ejaan menggunakan ketentuan bahasa Indonesia yang baik dan benar (EYD). penulisan dengan ketentuan : \begin{enumerate}
+\item Batas pengetikan 4 cm dari pinggir kertas sebelah kiri
+\item 3 cm dari pinggir kertas sebelah atas, bawah, dan kanan
+This is the secon
+\item Nomor halaman ditempatkan pada sebelah kanan atas dengan angka Arab (1, 2, 3, …), kecuali pada halaman judul bab nomor halaman diletakkan di tengah (center) bagian bawah, yang mencakup (termasuk) daftar acuan, daftar pustaka, dan semua lampiran (sampai halaman paling akhir).
+\item Khusus pada nomor halaman sebelum Bab I, yaitu mulai dari halaman sampul sampai dengan Daftar Isi/Tabel menggunakan angka Romawi ( i, ii, iii, iv, …) yang diletakkan di tengah bagian bawah. Pada halaman judul bab, nomor halaman juga diletakkan di tengah bagian bawah.
+\item Judul tabel ditulis dengan jarak satu spasi di atas tabel. Untuk huruf pertama setiap kata ditulis huruf besar (kecuali kata sambung di, pada, ke, dengan, dan sebagainya). Judul gambar / grafik / bagan diletakkan di bawah gambar dengan ketentuan penulisan seperti judul tabel. Judul diberi nomor urut dengan angka biasa.
+\item Kutipan tulisan di tulis dengan standart IEEE.
+\item Laporan ditulis dalam bahasa Indonesia, laporan yang berbahasa Indonesia harus mengikuti ketentuan Ejaan yang Disempurnakan (EYD) 1975 dan Pedoman Umum Pembentukan Istilah (PUPI), termasuk tata cara penggunaan tanda baca dan pemutusan kata, serta tidak menggunakan kata asing untuk kata yang sudah mempunyai padanan kata dalam bahasa Indonesia. Kata asing harus ditulis Italic. Singkatan harus ditulis secara lengkap ketika pertama kali digunakan dengan singkatannya dalam tanda kurung, seterusnya cukup menggunakan singkatannya saja.
+\end{enumerate}
+\section{Acuan/Daftar Pustaka/Kajian Pustaka}
+Ketentuan dalam penulis kajian pustaka menggunakan format IEEE dan referensi yang bersumber dari jurnal terindex scopus terdiri dari
+\begin{itemize}
+\item
+Internship dan Tugas Akhir : 15 jurnal terindex scopus dan 5 referensi perpustakaan Politeknik Pos Indonesia
+
+\item
+The template will number citations consecutively within brackets [1]. The sentence punctuation follows the bracket [2]. Refer simply to the reference number, as in [3]—do not use “Ref. [3]” or “reference [3]” except at the beginning of a sentence: “Reference [3] was the first ...”
+Number footnotes separately in superscripts. Place the actual footnote at the bottom of the column in which it was cited. Do not put footnotes in the reference list. Use letters for table footnotes.
+Unless there are six authors or more give all authors’ names; do not use “et al.”. Papers that have not been published, even if they have been submitted for publication, should be cited as “unpublished” [4]. Papers that have been accepted for publication should be cited as “in press” [5]. Capitalize only the first word in a paper title, except for proper nouns and element symbols.
+For papers published in translation journals, please give the English citation first, followed by the original foreign-language citation [6].
+
+\end{itemize}
+\end{enumerate}
+
+ 
