--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -232,7 +232,7 @@ Penulisan laporan internship dan tugas akhir harus mengikuti kerangka yang telah
 
 \begin{enumerate}
 \item
-Bagian Awal terdiri dari :
+Bagian awal bagi laporan yang menggunakan bahasa inggris bisa menggunakan format latex. Bagi laporan berbahasa indonesia dan menggunakan word, Bagian Awal terdiri dari :
 \begin{enumerate}
 \item lembar muka/cover halam depan bahasa indonesia dan bahasa inggris ; (hal. Lampiran)
 \item lembar pengesahan dari perusahaan dan prodi/jurusan; (hal. Lampiran) 
@@ -252,34 +252,41 @@ Daftar isi termasuk :
 \item	daftar lampiran. (hal. Lampiran) 
 
 \end{enumerate}
+
+
 \item
 Bagian Isi terdiri dari :
 \begin{enumerate}
-\item BAB I Pendahuluan
+\item BAB I Pendahuluan / Introduction
 \begin{itemize}
-\item 1.1.	Latar Belakang 
-\item 1.2.	Identifikasi Masalah 
-\item 1.3.	Tujuan dan Manfaat 
-\item 1.4.	Ruang Lingkup 
-\item 1.5.	Penelitian Sebelumnya
-\item 1.6.	Gambaran Umum Metodologi Penelitian 
+\item 1.1.	Latar Belakang / Background
+\item 1.2.	Identifikasi Masalah / Problems Identification
+\item 1.3.	Tujuan dan Manfaat / Objective and Contribution
+\item 1.4.	Ruang Lingkup / Scoop and Environtment
+%\item 1.5.	Penelitian Sebelumnya
+%\item 1.6.	Gambaran Umum Metodologi Penelitian 
 \end{itemize}
-\item BAB II Landasan Teori
-\item BAB III Gambaran Organisasi Perusahaan
+\item BAB II Landasan Teori / Related Works
 \begin{itemize}
-\item 3.1.	Sejarah Perusahaan
-\item 3.2.	Visi dan Misi Perusahaan
-\item 3.3.	Struktur Organisasi dan Job Description Perusahaan 
-\item 3.4.	Deskripsi dan Ruang Lingkup Internsip/Tugas Akhir
+\item 3.1.	Description of same topics
+\item 3.2.	Description of same method
 \end{itemize}
-\item BAB IV Metodologi Penelitian
-\begin{itemize}
-\item 4.1.	Diagram Alur Metodologi Penelitian.
-\item 4.2.  Tahapan – Tahapan Diagram Metodologi Penelitian
 
-Untuk menentukan diagram alur Metodologi Penelitain bisa menggunakan jurnal terindex scopus.
- 
+\item BAB III Gambaran Organisasi Perusahaan / Case Study
+\begin{itemize}
+\item 3.1.	Sejarah Perusahaan / History of case study
+\item 3.2.	Visi dan Misi Perusahaan / Vision and Mission of case study
+\item 3.3.	Struktur Organisasi dan Job Description Perusahaan / Organization Structure of case study
+\item 3.4.	Deskripsi dan Ruang Lingkup Internsip/Tugas Akhir / Data description source
 \end{itemize}
+\item BAB IV Metodologi Penelitian / Methods
+\begin{itemize}
+\item 4.1.	Metodologi Penelitian. / 	Research Methodology 
+\item 4.2.  Tahapan – Tahapan Diagram Metodologi Penelitian / Method Description 1
+\item 4.3.  Tahapan – Tahapan Diagram Metodologi Penelitian / Method Description 2
+\end{itemize}
+
+Untuk Topik Sistem Informasi BAB V berisi :
 \item BAB V Analisis dan Sistem
 \begin{itemize}
 \item 5.1.	Analisis sistem yang berjalan
@@ -288,18 +295,23 @@ Untuk menentukan diagram alur Metodologi Penelitain bisa menggunakan jurnal teri
 \item 5.4.	Analisis dan Perancangan User Interface Sistem. 
 \item 5.5.	Analisis dan Perancangan Arsitektur Sistem/Aplikasi.
 \end{itemize}
-\item BAB V Pembahasan dan Evaluasi
 
-
-Pembahasa yang dilakukan dengan cara mengukur dari hasil analisi dengan menggunakan framwork dan metode yang ada.
-\item BAB VI Penutup
+Untuk Topik Teknik Informatika BAB V berisi :
+\item BAB V Experiment and Result
 \begin{itemize}
-\item 6.1.	Kesimpulan
-\item 6.2.  Saran
-
-merangkum dan menjawab dari hasil keseluruhan masalah yang ada
- 
+\item 5.1.	Experiment
+\item 5.2.	Result
 \end{itemize}
+
+\item BAB VI Conclusion
+\begin{itemize}
+\item 6.1.	Conclussion of Problems
+\item 6.2.  Conclusion of Method
+\item 6.3.  Conclusion of Experiment
+\end{itemize}
+
+\item BAB VII Discussion
+
 \item Daftar Pustaka
 
 Ketentuan dalam penulis kajian pustaka menggunakan format IEEE dan referensi yang bersumber dari jurnal terindex scopus terdiri dari
